Fix alignement in the CS

--- a/css/main.original.css
+++ b/css/main.original.css
@@ -342,7 +342,7 @@ img { max-width: 100% }
 }
 
 
-.post code { padding: 1px 5px; }
+.post code { padding: 1px 0px; }
 
 .post ul,
 .post ol { margin-left: 1.35em; }
